--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,11 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.19.3
-forge_version=44.0.11
+forge_version=44.0.37
 mod_version=0.7.22b
 release_type=beta
-mappings_channel=official
-#mappings_version=2022.11.27-1.19.2
-mappings_version=1.19.3
+mappings_channel=parchment
+mappings_version=2022.12.18-1.19.3
 jb_annotations=21.0.1
 
 # Test dependencies
