--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.19.3
-forge_version=44.0.11
+forge_version=44.0.36
 mod_version=0.7.22b
 release_type=beta
 mappings_channel=official
@@ -23,7 +23,7 @@ ttoolkit_version=0.1.3
 cc_version=1.102.0-SNAPSHOT
 curios_version=1.19.3-5.1.1.2
 minecolonies_version=1.19.2-1.0.1060-ALPHA
-appliedenergistics_version=12.1.2-beta
+appliedenergistics_version=13.0.3-alpha
 patchouli_version=1.19.2-76
 refinedstorage_version=1.11.1
 botania_version=1.19.2-436-SNAPSHOT
