Added support for AE2 Things Deep Item Storage Disk

--- a/build.gradle
+++ b/build.gradle
@@ -233,6 +233,13 @@ repositories {
             password = "\u0067hp_oGjcDFCn8jeTzIj4Ke9pLoEVtpnZMP4VQgaX"
         }
     }
+
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 configurations {
@@ -270,6 +277,10 @@ dependencies {
     implementation fg.deobf("com.refinedmods:refinedstorage:${refinedstorage_version}") {
         transitive false
     }
+
+    //AE2 Things
+    compileOnly "curse.maven:ae2things-609977:${ae2things_version}-sources"
+    runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
 
     // Botania
     implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
