--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ mekanism_version=1.18.2-10.2.5.465
 botania_version=1.18.2-434
 create_version=mc1.18.2_v0.5.0c+146
 flywheel_version=1.18-0.6.4.87
+ae2things_version=4096819
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
