--- a/gradle.properties
+++ b/gradle.properties
@@ -21,14 +21,14 @@ ttoolkit_version=0.1.3
 # Mod dependencies
 cc_version=1.18.2:1.101.0
 curios_version=1.18.2-5.0.7.1
-minecolonies_version=1.18.2-1.0.1142-ALPHA
+minecolonies_version=1.18.2-1.0.1228-ALPHA
 appliedenergistics_version=11.7.0
 patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
 mekanism_version=1.18.2-10.2.5.465
-botania_version=1.18.2-434
-create_version=mc1.18.2_v0.5.0c+146
-flywheel_version=1.18-0.6.4.87
+botania_version=1.18.2-435
+create_version=0.5.0.i-250
+flywheel_version=0.6.8.a-99
 ae2things_version=4096819
 
 # Mod dependencies which are needed for other mods
@@ -39,7 +39,7 @@ blockui_version=1.18.2-0.0.55-ALPHA
 multipiston_version=1.18.2-1.2.7-ALPHA
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.18.2-forge:10.2.1.283
+jei_version=1.18.2-forge:10.2.1.1002
 
 # Credentials for the intelligence repository
 spaceUsername = srendi
