--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,12 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 # Minecraft related
-minecraft_version=1.19.3
-forge_version=44.1.16
+minecraft_version=1.19.2
+forge_version=43.2.4
 mod_version=0.7.24b
 release_type=beta
-mappings_channel=official
-#mappings_version=2022.11.27-1.19.2
-mappings_version=1.19.3
+mappings_channel=parchment
+mappings_version=2022.09.18-1.19.2
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -20,7 +19,7 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.102.0-SNAPSHOT
+cc_version=1.101.2
 curios_version=1.19.3-5.1.1.2
 minecolonies_version=1.19.2-1.0.1060-ALPHA
 appliedenergistics_version=13.0.9-beta
@@ -37,8 +36,8 @@ domumornamentum_version=1.19-1.0.58-ALPHA
 blockui_version=1.19-0.0.64-ALPHA
 multipiston_version=1.19-1.2.14-ALPHA
 
-# For create
-flywheel_version=0.6.8.a-1
+# For Create
+flywheel_version=0.6.7-8
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.19.3-forge:12.1.1.13
