--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.19.2
-forge_version=43.2.4
+forge_version=43.2.6
 mod_version=0.7.24b
 release_type=beta
 mappings_channel=parchment
@@ -20,14 +20,14 @@ ttoolkit_version=0.1.3
 
 # Mod dependencies
 cc_version=1.101.2
-curios_version=1.19.3-5.1.1.2
+curios_version=1.19.2-5.1.2.2
 minecolonies_version=1.19.2-1.0.1060-ALPHA
-appliedenergistics_version=13.0.9-beta
+appliedenergistics_version=12.9.2
 patchouli_version=1.19.2-76
 refinedstorage_version=1.11.1
-botania_version=1.19.2-436-SNAPSHOT
-create_version=0.5.0.f-15
-mekanism_version=1.19.2-10.3.5.474
+botania_version=1.19.2-438-FORGE-SNAPSHOT
+create_version=0.5.0.i-23
+mekanism_version=1.19.2-10.3.8.477
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
@@ -37,10 +37,10 @@ blockui_version=1.19-0.0.64-ALPHA
 multipiston_version=1.19-1.2.14-ALPHA
 
 # For Create
-flywheel_version=0.6.7-8
+flywheel_version=0.6.8.a-14
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.19.3-forge:12.1.1.13
+jei_version=1.19.2-forge:11.6.0.1011
 
 # Credentials for the intelligence repository
 spaceUsername = Srendi
