Update some dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.19.3
-forge_version=44.1.17
+forge_version=44.1.21
 mod_version=0.7.25b
 release_type=beta
 mappings_channel=parchment
-mappings_version=2022.12.18-1.19.3
+mappings_version=2023.02.26-1.19.3
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -19,7 +19,7 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.102.0-SNAPSHOT
+cc_version=1.103.1
 curios_version=1.19.3-5.1.1.2
 minecolonies_version=1.19.2-1.0.1060-ALPHA
 appliedenergistics_version=13.0.9-beta
