--- a/build.gradle
+++ b/build.gradle
@@ -309,6 +309,9 @@ dependencies {
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
 
+    // Worldedit
+    runtimeOnly fg.deobf("curse.maven:worldedit-225608:4162208")
+
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
     testImplementation "org.hamcrest:hamcrest:${hamcrest_version}"
@@ -331,7 +334,7 @@ changelog {
     //1.16.5-1.1.1.1b
     //1.18-1.0r
     //1.19-1.0.0a
-    headerParserRegex = ~/\d+(\.\d+){1,2}-\d+(\.\d+){1,3}\w/
+    headerParserRegex = ~/^\d{1,2}\.\d{1,2}(\.\d{1,2})?-\d{1,2}(\.\d{1,2}){0,3}[a-zA-Z]$/
     itemPrefix = "-"
     keepUnreleasedSection = true
     unreleasedTerm = "[Unreleased]"
@@ -342,7 +345,7 @@ compileTestModJava {
     dependsOn(compileJava)
 }
 
-task setupServer(type: Copy) {
+tasks.register('setupServer', Copy) {
     group "test server"
     description "Sets up the environment for the test server."
 
@@ -378,8 +381,10 @@ test {
 }
 
 afterEvaluate {
-    tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xmaxerrs" << "2000"
+    tasks.withType(JavaCompile).tap {
+        configureEach {
+            options.compilerArgs << "-Xmaxerrs" << "2000"
+        }
     }
 }
 
