--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.19.2
 forge_version=43.2.6
-mod_version=0.7.24b
-release_type=beta
+mod_version=0.7.25r
+release_type=release
 mappings_channel=parchment
 mappings_version=2022.09.18-1.19.2
 jb_annotations=21.0.1
