--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.19.3
 forge_version=44.1.16
-mod_version=0.7.25b
-release_type=beta
+mod_version=0.7.25r
+release_type=release
 mappings_channel=official
 #mappings_version=2022.11.27-1.19.2
 mappings_version=1.19.3
