--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,4 @@ public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58652_
 public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58653_
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210559_ # rawTemplates
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210560_ # templates
+protected net.minecraft.world.level.ClipContext f_45686_ # collisionContext
