Adding powah sources as a dependency from cursemaven

--- a/build.gradle
+++ b/build.gradle
@@ -306,6 +306,9 @@ dependencies {
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
 
+    //Powah
+    implementation fg.deobf("curse.maven:powah-633483:4183078")
+
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
     testImplementation "org.hamcrest:hamcrest:${hamcrest_version}"
