--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58653_
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210559_ # rawTemplates
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210560_ # templates
 protected net.minecraft.world.level.ClipContext f_45686_ # collisionContext
+public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58650_ # levels
