[#429] Add back support for ae2 things Also add some debugging messages

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,10 +24,11 @@ curios_version=1.19.2-5.1.2.2
 minecolonies_version=1.19.2-1.0.1060-ALPHA
 appliedenergistics_version=12.9.2
 patchouli_version=1.19.2-76
-refinedstorage_version=1.11.1
+refinedstorage_version=1.11.6
 botania_version=1.19.2-438-FORGE-SNAPSHOT
 create_version=0.5.0.i-23
 mekanism_version=1.19.2-10.3.8.477
+ae2things_version=4367610
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
