--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,13 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 # Minecraft related
-minecraft_version=1.19.2
-forge_version=43.2.6
-mod_version=0.7.24b
-release_type=beta
-mappings_channel=parchment
-mappings_version=2022.09.18-1.19.2
+minecraft_version=1.19.3
+forge_version=44.1.16
+mod_version=0.7.26r
+release_type=release
+mappings_channel=official
+#mappings_version=2022.11.27-1.19.2
+mappings_version=1.19.3
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -19,29 +20,29 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.101.2
-curios_version=1.19.2-5.1.2.2
-minecolonies_version=1.19.2-1.0.1060-ALPHA
-appliedenergistics_version=12.9.2
-patchouli_version=1.19.2-76
+cc_version=1.102.0-SNAPSHOT
+curios_version=1.19.3-5.1.1.2
+minecolonies_version=1.19.3-1.0.1325-ALPHA
+appliedenergistics_version=13.0.10-beta
+patchouli_version=1.19.3-78
 refinedstorage_version=1.11.1
-botania_version=1.19.2-438-FORGE-SNAPSHOT
-create_version=0.5.0.i-23
-mekanism_version=1.19.2-10.3.8.477
+botania_version=1.19.2-436-SNAPSHOT
+create_version=0.5.0.f-15
+mekanism_version=1.19.2-10.3.5.474
 ae2things_version=4367610
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.19.2-1.0.452-ALPHA
-domumornamentum_version=1.19-1.0.58-ALPHA
-blockui_version=1.19-0.0.64-ALPHA
-multipiston_version=1.19-1.2.14-ALPHA
+structurize_version=1.19.3-1.0.474-ALPHA
+domumornamentum_version=1.19.3-1.0.78-ALPHA
+blockui_version=1.19.3-0.0.66-ALPHA
+multipiston_version=1.19.3-1.2.26-ALPHA
 
 # For Create
-flywheel_version=0.6.8.a-14
+flywheel_version=0.6.8.a-1
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.19.2-forge:11.6.0.1011
+jei_version=1.19.3-forge:12.4.0.22
 
 # Credentials for the intelligence repository
 spaceUsername = Srendi
