add powah version to properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ botania_version=1.19.2-438-FORGE-SNAPSHOT
 create_version=0.5.0.i-23
 mekanism_version=1.19.2-10.3.8.477
 ae2things_version=4367610
+powah_version=4183078
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
