--- a/build.gradle
+++ b/build.gradle
@@ -306,7 +306,7 @@ dependencies {
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
 
     //Powah
-    implementation fg.deobf("curse.maven:powah-633483:4183078")
+    implementation fg.deobf("curse.maven:powah-633483:${powah_version}")
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_version}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junit_version}"
