--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -39,13 +39,16 @@ body:
       multiple: false
       options:
         - Own compiled build.
-        - 1.19.3-0.7.26r (Latest 1.19.3)
-        - 1.19.3-0.7.25b
-        - 1.19.2-0.7.25r (Latest 1.19.2)
-        - 1.19.2-0.7.24b 
-        - 1.19.2-0.7.23b 
-        - 1.18.2-0.7.27r (Latest 1.18.2)
-        - older
+        - 1.19.3-0.7.28r (Latest 1.19.3)
+        - 1.19.3-0.7.27r
+        - 1.19.3-0.7.26r
+        - 1.19.2-0.7.27r (Latest 1.19.2)
+        - 1.19.2-0.7.26r
+        - 1.19.2-0.7.25r
+        - 1.18.2-0.7.29r (Latest 1.18.2)
+        - 1.18.2-0.7.28r
+        - 1.18.2-0.7.27r
+        - older (probably unsupported)
     validations:
       required: true
   - type: input
