[#463] Fix create integration for create 0.5.1a

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,8 +27,7 @@ patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
 mekanism_version=1.18.2-10.2.5.465
 botania_version=1.18.2-435
-create_version=0.5.0.i-250
-flywheel_version=0.6.8.a-99
+create_version=0.5.1.a-279
 ae2things_version=4096819
 
 # Mod dependencies which are needed for other mods
