[#463] Fix create integration for create 0.5.1a

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ appliedenergistics_version=12.9.2
 patchouli_version=1.19.2-76
 refinedstorage_version=1.11.6
 botania_version=1.19.2-438-FORGE-SNAPSHOT
-create_version=0.5.0.i-23
+create_version=0.5.1.a-279
 mekanism_version=1.19.2-10.3.8.477
 ae2things_version=4367610
 powah_version=4183078
@@ -37,9 +37,6 @@ structurize_version=1.19.2-1.0.491-ALPHA
 domumornamentum_version=1.19-1.0.83-ALPHA
 blockui_version=1.19-0.0.69-ALPHA
 multipiston_version=1.19.2-1.2.19-ALPHA
-
-# For Create
-flywheel_version=0.6.8.a-14
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.19.2-forge:11.6.0.1011
