--- a/build.gradle
+++ b/build.gradle
@@ -283,6 +283,7 @@ dependencies {
         transitive false
     }
 
+    //AE2 Things
     compileOnly "curse.maven:ae2things-609977:${ae2things_version}-sources"
     runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
 
@@ -301,8 +302,7 @@ dependencies {
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
     // Create
-    compileOnly fg.deobf("com.simibubi.create:create-1.19.2:${create_version}:all")
-    compileOnly fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
+    implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all")
 
     //Removed until fully ported
     //testImplementation fg.deobf("site.siredvin.ttoolkit:ttoolkit-${minecraft_version}:${ttoolkit_version}")
@@ -426,8 +426,7 @@ curseforge {
 }
 
 modrinth {
-    token = modrinthKey
-    // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
+    token = modrinthKey // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
     projectId = 'SOw6jD6x' // This can be the project ID or the slug. Either will work!
     versionNumber = "${minecraft_version}-${project.version}"
     versionName = "Advanced Peripherals ${minecraft_version} ${version}"
