Fix bugs that occur with the 1.19.2 merge - Roll the create version back to 0.5.0 since 0.5.1 does not exist for 1.19.3 - Rollback the changes made to the minecolonies class since the newest minecolonies version with this changes isn't made for 1.19.3 and minecolonie 1.19.3 isn't event on curseforge - Remove powah integration since powah does not exist for 1.19.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ appliedenergistics_version=13.0.10-beta
 patchouli_version=1.19.3-78
 refinedstorage_version=1.11.1
 botania_version=1.19.2-436-SNAPSHOT
-create_version=0.5.1.b-30
+create_version=0.5.0.j-2
 mekanism_version=1.19.2-10.3.5.474
 ae2things_version=4367610
 
@@ -37,6 +37,9 @@ structurize_version=1.19.3-1.0.474-ALPHA
 domumornamentum_version=1.19.3-1.0.78-ALPHA
 blockui_version=1.19.3-0.0.66-ALPHA
 multipiston_version=1.19.3-1.2.26-ALPHA
+
+# For Create
+flywheel_version=0.6.8.a-1
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
 jei_version=1.19.3-forge:12.4.0.22
