--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -68,3 +68,9 @@ mandatory = false
 versionRange = "[1.18.2-67,)"
 ordering = "NONE"
 side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "create"
+mandatory = false
+versionRange = "[0.5.1a,)"
+ordering = "NONE"
+side = "BOTH"
