--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.19.2
 forge_version=43.2.8
-mod_version=0.7.28r-Dev
+mod_version=0.7.28r
 release_type=release
 mappings_channel=parchment
 mappings_version=2022.09.18-1.19.2
