--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.19.2
 forge_version=43.2.8
-mod_version=0.7.28r-Dev
+mod_version=0.7.28r
 release_type=release
 mappings_channel=parchment
 mappings_version=2022.09.18-1.19.2
@@ -26,7 +26,7 @@ appliedenergistics_version=12.9.2
 patchouli_version=1.19.2-76
 refinedstorage_version=1.11.6
 botania_version=1.19.2-438-FORGE-SNAPSHOT
-create_version=0.5.1.a-29
+create_version=0.5.1.b-30
 mekanism_version=1.19.2-10.3.8.477
 ae2things_version=4367610
 powah_version=4183078
