Prepare for release - Removed botania integration since botania does not exist for 1.19.3 - Removed minecolonies integration without removing the block since minecolonies does not exist for 1.19.3 - Backport create integration since create 5.1 does not exist for 1.19.3

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 wrapper {
-    gradleVersion = '7.5'
+    gradleVersion = '8.1.1'
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -290,16 +290,16 @@ dependencies {
     // runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
 
     // Botania
-    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
+    //compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
 
 
     // Minecolonies
     // Change to compileOnly when running `runData`
-    compileOnly fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
-    compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}")
-    compileOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
-    compileOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
-    compileOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
+    //compileOnly fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}")
+    //compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}")
+    //compileOnly fg.deobf("com.ldtteam:multipiston:${multipiston_version}")
+    //compileOnly fg.deobf("com.ldtteam:domum_ornamentum:${domumornamentum_version}:universal")
+    //compileOnly fg.deobf("com.ldtteam:blockui:${blockui_version}")
 
     //Patchouli
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
