--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 
 # Minecraft related
 minecraft_version=1.18.2
-forge_version=40.2.0
+forge_version=40.2.4
 mod_version=0.7.30r
 release_type=release
 mappings_channel=parchment
@@ -27,7 +27,7 @@ patchouli_version=1.18.2-72-SNAPSHOT
 refinedstorage_version=1.10.2
 mekanism_version=1.18.2-10.2.5.465
 botania_version=1.18.2-435
-create_version=0.5.1.a-279
+create_version=0.5.1.b-285
 ae2things_version=4096819
 
 # Mod dependencies which are needed for other mods
