Change min Create version to fix #469

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -71,6 +71,6 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "create"
 mandatory = false
-versionRange = "[0.5.1a,)"
+versionRange = "[0.5.1,)"
 ordering = "NONE"
 side = "BOTH"
