--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 # Minecraft related
-minecraft_version=1.19.3
-forge_version=44.1.23
-mod_version=0.7.29r
+minecraft_version=1.20.1
+forge_version=47.0.3
+mod_version=0.7.30r
 release_type=release
 mappings_channel=official
 #mappings_version=2022.11.27-1.19.2
-mappings_version=1.19.3
+mappings_version=1.20.1
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -20,10 +20,10 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.102.0-SNAPSHOT
-curios_version=1.19.3-5.1.1.2
+cc_version=1.105.0
+curios_version=5.2.0-beta.3+1.20.1
 minecolonies_version=1.19.3-1.0.1325-ALPHA
-appliedenergistics_version=13.0.10-beta
+appliedenergistics_version=15.0.2-alpha
 patchouli_version=1.19.3-78
 refinedstorage_version=1.11.1
 botania_version=1.19.2-436-SNAPSHOT
@@ -42,7 +42,7 @@ multipiston_version=1.19.3-1.2.26-ALPHA
 flywheel_version=0.6.8.a-1
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.19.3-forge:12.4.0.22
+jei_version=1.20.1-forge:15.0.0.15
 
 # Credentials for the intelligence repository
 spaceUsername = Pat
