--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.logging.level=info
 # Minecraft related
 minecraft_version=1.20.1
 forge_version=47.0.3
-mod_version=0.7.30r
-release_type=release
+mod_version=0.7.30a
+release_type=alpha
 mappings_channel=official
 #mappings_version=2022.11.27-1.19.2
 mappings_version=1.20.1
