--- a/build.gradle
+++ b/build.gradle
@@ -264,6 +264,7 @@ dependencies {
     implementation fg.deobf("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_version}")
     // Compile-time API required
     // Ae2
+    // We already use
     compileOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
     // Curios
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
@@ -276,7 +277,7 @@ dependencies {
     // runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")// core
 
     // Applied Energistics 2
-    compileOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
+    runtimeOnly fg.deobf("appeng:appliedenergistics2-forge:${appliedenergistics_version}")
     // Curios
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
