--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,14 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
 org.gradle.logging.level=info
 
 # Minecraft related
-minecraft_version=1.19.3
-forge_version=44.1.23
+minecraft_version=1.19.2
+forge_version=43.2.14
 mod_version=0.7.29r
 release_type=release
-mappings_channel=official
-#mappings_version=2022.11.27-1.19.2
-mappings_version=1.19.3
+mappings_channel=parchment
+mappings_version=2022.09.18-1.19.2
 jb_annotations=21.0.1
 
 # Test dependencies
@@ -20,29 +19,27 @@ kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 # Mod dependencies
-cc_version=1.102.0-SNAPSHOT
-curios_version=1.19.3-5.1.1.2
-minecolonies_version=1.19.3-1.0.1325-ALPHA
-appliedenergistics_version=13.0.10-beta
-patchouli_version=1.19.3-78
-refinedstorage_version=1.11.1
+cc_version=1.101.2
+curios_version=1.19.2-5.1.2.2
+minecolonies_version=1.19.2-1.0.1410-ALPHA
+appliedenergistics_version=12.9.2
+patchouli_version=1.19.2-76
+refinedstorage_version=1.11.6
 botania_version=1.19.2-438-FORGE-SNAPSHOT
-create_version=0.5.0.j-2
+create_version=0.5.1.b-30
 mekanism_version=1.19.2-10.3.8.477
 ae2things_version=4367610
+powah_version=4183078
 
 # Mod dependencies which are needed for other mods
 # For minecolonies
-structurize_version=1.19.3-1.0.474-ALPHA
-domumornamentum_version=1.19.3-1.0.78-ALPHA
-blockui_version=1.19.3-0.0.66-ALPHA
-multipiston_version=1.19.3-1.2.26-ALPHA
-
-# For create
-flywheel_version=0.6.8.a-1
+structurize_version=1.19.2-1.0.491-ALPHA
+domumornamentum_version=1.19-1.0.83-ALPHA
+blockui_version=1.19-0.0.69-ALPHA
+multipiston_version=1.19.2-1.2.19-ALPHA
 
 # Mod dependencies for testing stuff(Only used in the dev environment)
-jei_version=1.19.3-forge:12.4.0.22
+jei_version=1.19.2-forge:11.6.0.1011
 
 # Credentials for the intelligence repository
 spaceUsername = Pat
