--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,10 @@ mappings_version=2022.09.18-1.19.2
 jb_annotations=21.0.1
 
 # Test dependencies
-junit_version=5.7.2
+junit_version=5.9.3
 hamcrest_version=2.2
-kotlin_version=1.6.10
-kotlinx_coroutines_version=1.6.0-RC3
+kotlin_version=1.9.0
+kotlinx_coroutines_version=1.7.2
 ttoolkit_version=0.1.3
 
 # Mod dependencies
