--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ def static getenv(path = ".env") {
 def secretEnv = getenv()
 def curseforgeKey = secretEnv["CURSEFORGE_KEY"] ?: System.getenv("CURSEFORGE_KEY") ?: ''
 def modrinthKey = secretEnv["MODRINTH_KEY"] ?: System.getenv("MODRINTH_KEY")
+def repositoryName = secretEnv["PUBLIC_REP_NAME"] ?: System.getenv("PUBLIC_REP_NAME")
+def repositoryKey = secretEnv["PUBLIC_REP_KEY"] ?: System.getenv("PUBLIC_REP_KEY")
 
 sonarqube {
     properties {
@@ -431,24 +433,25 @@ publishing {
     repositories {
         maven {
             name="space"
-            url "https://packages.intelligence-modding.de/maven/p/advanced-peripherals/ap-repository"
+            url = "https://packages.intelligence-modding.de/maven/p/advanced-peripherals/ap-repository"
             credentials {
                 username = spaceUsername
                 password = spacePassword
             }
         }
         maven {
-            name="github"
-            url "https://maven.pkg.github.com/SirEndii/AdvancedPeripherals"
+            name = "public"
+            url = "https://mvn.intelligence-modding.de/intelligence"
             credentials {
-                username = secretEnv["GH_ACTOR"] ?: System.getenv("GH_ACTOR") ?: ''
-                password = secretEnv["GH_TOKEN"] ?: System.getenv("GH_TOKEN") ?: ''
+                username = repositoryName
+                password = repositoryKey
             }
         }
     }
     publications {
         gpr(MavenPublication) {
             artifactId = "advancedperipherals"
+            version = project.hasProperty('teamcityVersion') ? "${minecraft_version}-${mod_version}-DEV_${project.teamcityVersion}" : "${minecraft_version}-${mod_version}"
             from(components.java)
         }
     }
