[#490] Fixed that `getUsedItemStorage` does not respect AE2Things DISK drives For any reason, the snipped which was needed to read the DISK drives was used for fluid storage...

--- a/build.gradle
+++ b/build.gradle
@@ -289,7 +289,7 @@ dependencies {
 
     //AE2 Things
     compileOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
-    //runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
+    runtimeOnly fg.deobf("curse.maven:ae2things-609977:${ae2things_version}-sources")
 
     // Botania
     implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
